deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapi-deployment
  namespace: default
  labels:
    app: nodeapi
spec:
  selector:
    matchLabels:
      app: nodeapi
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nodeapi
    spec:
      containers:
      - name: nodeapi
        image: mklateef/nodeapi:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
