service.yaml
apiVersion: v1
kind: Service
metadata:
  name: noderestapi-service
spec:
  selector:
    app: noderestapi
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
