services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapi-service
  namespace: default
spec:
  selector:
    app: nodeapi
  type: LoadBalancer
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: nodeapi
    protocol: TCP
    port: 5000
    targetPort: 3000
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    nodePort: 32100
