ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodeapi-ingress
spec:
  rules:
     - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nodeapi-service
                port:
                  number: 80
